# wma

./: .gitignore  CMakeLists.txt  README  Readme.md  brutesolver.cpp  generator.cpp  hilbertsolver.cpp  install.sh  main.cpp  nlrsolver.cpp  osmtontw.cpp
bikes_data/: copenhagen_center.ntw  cph-regions.geojson
bikes_data/bikes/: bikes_cph.ntw  distMatrFull.pkl  distMatrFull.txt  facility_location_hours.csv
bikes_data/center/: cph_center.ntw  facility_location_hours_center.csv  readme.md
experiments/: Plot Graph.ipynb  description.md
experiments/.ipynb_checkpoints/: Plot Graph-checkpoint.ipynb
experiments/analysis/: clustered.ipynb  cph_real.ipynb  geometric gurobi exploration.ipynb  geometric with coords + hilbert.ipynb  geometric.ipynb  geometric_preliminary_small_gurobi_vs_wma_february.ipynb  real.ipynb
experiments/analysis/.ipynb_checkpoints/: clustered-checkpoint.ipynb  cph_real-checkpoint.ipynb  geometric gurobi exploration-checkpoint.ipynb  geometric with coords + hilbert-checkpoint.ipynb  geometric-checkpoint.ipynb  geometric_preliminary_small_gurobi_vs_wma_february-checkpoint.ipynb  real-checkpoint.ipynb
experiments/clustered/: calcDistMatr.sh
experiments/clustered/c_n10000m1000k100cl20d1.5/: generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/d_n1000-m100-cl5-k30-c10/: generate.sh  run_fcla_l0.py  run_hilbert.py
experiments/clustered/d_n10000-m1000-cl40-k300-c10/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/greedy/: generate.sh  run_fcla.py  run_fcla_greedy_rand.py  run_fcla_greedy_rand_2.py  run_fcla_greedy_rand_3.py
experiments/clustered/k_n10000m1000c10cl20/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/kc_n10000m1000cl40/: calcDistMatrATA.sh  run_hilbert.py
experiments/clustered/m_multi_n10000k200c10cl20/: generate.sh  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/m_n10000k200c10cl20/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/m_n10000k200cl20/: generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py  tmp.txt
experiments/clustered/n_m-n0.01c3/: generate.sh  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/n_m-n0.01c3_multi/: generate.sh  generate_pot_fac.py  run_fcla_g_rand.py  run_gurobi.py  run_hilbert.py
experiments/clustered/n_m-n0.01c3_multi2/: generate.sh  generate_pot_fac.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/n_m-n0.05c-minc2m-k10/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_brnn.py  run_fcla.py  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py  run_nlr.py  tmp.json
experiments/clustered/n_m-n0.05c-minc2m-k10_2/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py  run_nlr.py
experiments/clustered/n_m-n0.05k-n0.01c20d1conClust20/: .run_gurobi.py.swo  generate.sh  run_fcla.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py  tmp.json
experiments/clustered/n_m-n0.05k-n0.01c20d2conClust20/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla.py  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/n_m-n0.1k-n0.01c20d2conClust100/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/clustered/n_m-n0.1k-n0.01c20d2conClust5/: calcDistMatr.sh  calcDistMatrATA.sh  generate.sh  run_fcla.py  run_fcla_g_rand.py  run_fcla_l0.py  run_gurobi.py  run_hilbert.py
experiments/geometric/: generate_geometric.sh  generate_geometric_fixed_sources.sh  readme.md
experiments/geometric/30sourcesVarySize/: generate_geometric_fixed_sources.sh  run_fcla.py  run_gurobi.py
experiments/geometric/a_n2048c16k32m256/: generate.sh  run_gurobi.py
experiments/profiling/: 148978295871528294.ntw  fcla profiling with gamma.ipynb  fcla profiling.ipynb  fcla_early.json  fcla_incactive.json  fcla_lambda.json  fcla_noheap.json  fcla_simple.json  gurobi.json  new_gamma.json  solve_gurobi.sh  tmp.json
experiments/real/: Make PBF connected.ipynb  aalborg.sh  connectivity analysis.ipynb  cph.sh  moscow.sh  ny.sh  readme.md  riga.sh  test.edgelist.txt  test.graphml  test_tiny.graphml
include/: Bipartite.h  EdgeGenerator.h  ExploringEdgeGenerator.h  FacilityChooser.h  FacilityRank.h  Hilbert.h  HilbertSolver.h  Logger.h  Matcher.h  NLR.h  Network.h  RoadNetwork.h  SIA.h  TargetEdgeGenerator.h  TargetExploringEdgeGenerator.h  Visitor.h  exceptions.h  helpers.h  nheap.h
lib/igraph-0.7.1/: Makefile  Makefile.in  config.h.in~  config.status  igraph.pc  libtool
notebooks/: CPH processing.ipynb  Yelp.ipynb  clustered.ipynb  collectTwitterAndRestaurants.ipynb  cph_real.ipynb  geometric with coords + hilbert.ipynb  geometric_preliminary_small_gurobi_vs_wma_february.ipynb  gowalla.ipynb  real.ipynb  trajectoryMapping.ipynb  wma_naive.ipynb
results/: 1488183781246849658.ntw  1488183781323580264.ntw  148818378139584665.ntw  1488183781444315914.ntw  outofnodesforfac2sourcesplus2andcap2.ntw
scripts/: CleanGraph.ipynb  Network.py  OSMparser.ipynb  WorkingHours.ipynb  calculateDistMatrATA.py  calculateDistMatrSTA.py  calculateDistMatrSTT.py  cleanGraph.py  collectTwitter.py  facility_location_hours.csv  generate_geometric.sh  getGraphInfo.py  helpers.py  mergeResults.py  plotResults.py  processTwitter.sh  processTwitter04.sh  processTwitter05.sh  putRandomCustomers.py  readme.txt  removeDupEdges.py  run_geometric.sh  solveGurobi.py  solveGurobiEqualify.py
scripts/.ipynb_checkpoints/: CleanGraph-checkpoint.ipynb  OSMparser-checkpoint.ipynb
src/: Bipartite.cpp  Hilbert.cpp  RoadNetwork.cpp  nheap.cpp
tests/: SIA_tests.cpp  WMA.py  fcla_tests.cpp  infinite_tests.cpp  matcher_tests.cpp  nlr_tests.cpp  simple_tests.cpp
(+840 files in other folders)
